hphp/hack/test/typecheck/reified_generics/enforceable_targ_methcall.php.like_types.exp
File "enforceable_targ_methcall.php", line 13, characters 9-19:
Invalid type (Typing[4302])
File "enforceable_targ_methcall.php", line 8, characters 39-40:
Type parameter Tf was declared __Enforceable here
File "enforceable_targ_methcall.php", line 13, characters 9-19:
This type is not enforceable because it has a type with an erased generic type argument, except in a like cast when the corresponding type parameter is covariant
File "enforceable_targ_methcall.php", line 15, characters 9-28:
Invalid type (Typing[4302])
File "enforceable_targ_methcall.php", line 8, characters 39-40:
Type parameter Tf was declared __Enforceable here
File "enforceable_targ_methcall.php", line 15, characters 17-27:
This type is not enforceable because it has a type with an erased generic type argument, except in a like cast when the corresponding type parameter is covariant
